Fixing the overflow

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -55,3 +55,6 @@ footer ul li {
     list-style: none;
     float: right;
 }
+.msgoverflow{
+    margin:0;
+}
